-a base param file is overwritten after each class and is used during each class to generate vairiations
-the correct set of parameters are passed to the Evaluators

SuperTrainer
-randomization can now be specified to affect whole groups of parameters in the same way

Generics
-specialSuperParams is a list of groups of parameters used by the super trainer to randomize the behavior or each Trainer
but these groups are all changed in specific ways as specified in the randomizeParameters function
-specialRange is a list of range values to help set the special param groups
-nonnegorzero tells the program what groups must be positive and non zero
-storedInput has been moved from the CryptoEvalutor file and serves as the passed parameters for each Evaluator

CryptoEvalutor
-reads in input correctly from the argv and stdin if run from a bot

6/15/18

Generics
-added calcPercentChange

CryptoTrainer
-now can run multiple evaluators when run by supertrainer

CryptoEvaluator
-now can be run by a trainer that was run by a super trainer

CryptoStatAnalysis
-uses the real logging system


6/19/18
updated all files that use priceSymbols to automatically update it

updated both BackTestDataCollector and CryptoStats to use passed priceSymbols dictionaries that are either the default one or one that is passed to them (YOU SHOULD PASS TO IT AN UPDATED ONE). cuts down on overall API calls needed to constantly update priceSymbols

PriceSymbolsUpdater
-made the file so priceSymbols can be set to the accurate most recent list based on the website used

CryptoEvaluator
-added function to ensure all the data dictionaries have the right currencies as key values

OldCode
-old code that I did not want to delete

Generics
-added a getLowerCaseDict where both the keys and values can be set to lower and a new dictionary is return

PseudoAPIDataStream
-all rows are  build using full symbol list
-all tables are build using full symbol list